--- a/backend/music/requirements.txt
+++ b/backend/music/requirements.txt
@@ -6,3 +6,7 @@ scikit-learn>=1.3.0
 scipy>=1.11.0
 pyarrow>=14.0.0
 requests>=2.31.0
+thefuzz>=0.20.0
+python-dotenv>=1.0.0
+# Para o backend de Músicas (Spotify)
+# Não é necessário instalar nada extra, pois as dependências já estão na lista.
